# dbt-config-guard

./: .dbt_config_guard.yml  .editorconfig  .gitignore  .lefthook.yml  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
doc/rules/: README.md  model_columns.data_tests.required.md  model_columns.description.consistent.md  model_columns.description.required.md  source_columns.data_tests.required.md  source_columns.description.required.md
etc/dbt/examples/jaffle-shop/: dbt_project.yml
etc/jinja2/templates/: rule_index.md.j2  rule_item.md.j2
src/main/dbt_config_guard/: main.py
src/main/dbt_config_guard/commands/: check.py
src/main/dbt_config_guard/entities/: entity.py  model.py  model_column.py  project.py  source.py  source_column.py
src/main/dbt_config_guard/errors/: logic.py
src/main/dbt_config_guard/formatters/: __init__.py  formatter.py  json.py  ltsv.py  text.py
src/main/dbt_config_guard/rule_conditions/: model.py  model_column.py  rule_condition.py  source.py  source_column.py
src/main/dbt_config_guard/rules/: __init__.py  model.py  model_column.py  model_column_data_tests_required.py  model_column_description_consistent.py  model_column_description_required.py  project.py  rule.py  source.py  source_column.py  source_column_data_tests_required.py  source_column_description_required.py
src/main/dbt_config_guard/services/: checker.py  registry.py  ruleset.py
src/main/dbt_config_guard/utils/: config.py  text.py
src/test/fixtures/: fixture.py  model.py  model_column.py  project.py  source.py  source_column.py
(+13 files in other folders)
